# paddington

./: .env.example  JOURNAL.md  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
exercises/: 01_fizzbuzz.py  02_typed_functions.py  03_pydantic_users.py  04_async_basics.py  05_httpx_client.py  06_postgres_raw.py  07_llm_openai.py  08_llm_anthropic.py  09_streaming.py  10_structured_output.py  11_image_handler.py  12_tool_calling.py  13_langgraph_basics.py
migrations/: env.py
migrations/versions/: 0557189f61a3_add_documents_and_document_chunks_tables.py  0bac639420c1_add_refresh_tokens_table.py  48acbd777954_add_updated_at_to_users.py  4b243e641a24_add_role_to_users.py  826751c37c92_create_users_table.py  cd53a050f85e_enable_pgvector_extension.py  eccd254ff9ef_add_hashed_password_to_users.py  ff7a256c3f66_change_created_at_to_timezone_aware.py
src/paddington/: cli.py  config.py  database.py  dependencies.py  exception_handlers.py  exceptions.py  logging_config.py  main.py
src/paddington/agent/: agent_loop.py  tools.py
src/paddington/llm/: client.py  embedding_service.py
src/paddington/models/: __init__.py  document.py  enums.py  refresh_token.py  user.py
src/paddington/repositories/: document_repository.py  refresh_token_repository.py  user_repository.py
src/paddington/routes/: __init__.py  agent.py  auth.py  chat.py  documents.py  echo.py  health.py  users.py
src/paddington/schemas/: agent.py  auth.py  chat.py  document.py  echo.py  user.py
src/paddington/services/: auth_service.py  document_service.py  echo_service.py  user_service.py
tests/: conftest.py  test_agent.py  test_auth.py  test_chat.py  test_documents.py  test_main.py  test_users.py
