[project]
name = "paddington"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.135.3",
    "greenlet>=3.4.0",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "sqlalchemy>=2.0.49",
    "structlog>=25.5.0",
    "uvicorn>=0.44.0",
]
[tool.ruff]
   line-length = 100
   target-version = "py312"
   
   [tool.ruff.lint]
   select = ["E", "F", "I", "N", "UP", "B", "SIM"]
[tool.pytest.ini_options]
    asyncio_mode = "auto"
    testpaths = ["tests"]
[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.10",
]
[build-system]
    requires = ["hatchling"]
    build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
    packages = ["src/paddington"]
