[project]
name = "paddington"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "anthropic>=0.97.0",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.135.3",
    "greenlet>=3.4.0",
    "langchain-text-splitters>=1.1.2",
    "litellm>=1.83.0",
    "openai>=2.32.0",
    "passlib[argon2]>=1.7.4",
    "pgvector>=0.4.2",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.49",
    "structlog>=25.5.0",
    "tenacity>=9.1.4",
    "tiktoken>=0.12.0",
    "uvicorn>=0.44.0",
]
[tool.ruff]
   line-length = 100
   target-version = "py312"
   
   [tool.ruff.lint]
   select = ["E", "F", "I", "N", "UP", "B", "SIM"]
[tool.pytest.ini_options]
    asyncio_mode = "auto"
    testpaths = ["tests"]
[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.10",
    "testcontainers>=4.14.2",
]
[build-system]
    requires = ["hatchling"]
    build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
    packages = ["src/paddington"]
